// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component it renders correctly with custom className 1`] = `
<div>
  <button
    class="btn btn-primary custom-class"
    type="button"
  >
    <span>
      Custom
    </span>
    <div
      class="el-block"
    />
    <div
      class="el-loader"
    />
  </button>
</div>
`;

exports[`Button component it renders correctly with custom iconLeft 1`] = `
<div>
  <button
    class="btn btn-secondary btn-ic-left "
    type="button"
  >
    <span>
      <i
        class="fas fa-user el-ic-before"
      />
      User
    </span>
    <div
      class="el-block"
    />
    <div
      class="el-loader"
    />
  </button>
</div>
`;

exports[`Button component it renders correctly with custom iconRight 1`] = `
<div>
  <button
    class="btn btn-secondary btn-ic-right "
    type="button"
  >
    <span>
      User
      <i
        class="fas fa-user el-ic-after"
      />
    </span>
    <div
      class="el-block"
    />
    <div
      class="el-loader"
    />
  </button>
</div>
`;

exports[`Button component it renders correctly with custom id 1`] = `
<div>
  <button
    class="btn btn-primary "
    id="custom-id"
    type="button"
  >
    <span>
      Custom ID
    </span>
    <div
      class="el-block"
    />
    <div
      class="el-loader"
    />
  </button>
</div>
`;

exports[`Button component it renders correctly with custom link 1`] = `
<div>
  <a
    class="btn btn-primary "
    href="https://google.com"
    rel="noopener noreferrer"
  >
    <span>
      Google
    </span>
    <div
      class="el-block"
    />
    <div
      class="el-loader"
    />
  </a>
</div>
`;

exports[`Button component it renders correctly with custom onClick 1`] = `
<div>
  <button
    class="btn btn-primary "
    type="button"
  >
    <span>
      Click
    </span>
    <div
      class="el-block"
    />
    <div
      class="el-loader"
    />
  </button>
</div>
`;

exports[`Button component it renders correctly with custom size 1`] = `
<div>
  <button
    class="btn btn-primary btn-lg "
    type="button"
  >
    <span>
      Large
    </span>
    <div
      class="el-block"
    />
    <div
      class="el-loader"
    />
  </button>
</div>
`;

exports[`Button component it renders correctly with custom target 1`] = `
<div>
  <a
    class="btn btn-primary "
    href="https://google.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span>
      Google
    </span>
    <div
      class="el-block"
    />
    <div
      class="el-loader"
    />
  </a>
</div>
`;

exports[`Button component it renders correctly with custom type 1`] = `
<div>
  <button
    class="btn btn-primary "
    type="submit"
  >
    <span>
      Submit
    </span>
    <div
      class="el-block"
    />
    <div
      class="el-loader"
    />
  </button>
</div>
`;

exports[`Button component it renders correctly with custom variant 1`] = `
<div>
  <button
    class="btn btn-secondary "
    type="button"
  >
    <span>
      Secondary
    </span>
    <div
      class="el-block"
    />
    <div
      class="el-loader"
    />
  </button>
</div>
`;

exports[`Button component it renders correctly with default props 1`] = `
<div>
  <button
    class="btn btn-primary "
    type="button"
  >
    <span>
      Default
    </span>
    <div
      class="el-block"
    />
    <div
      class="el-loader"
    />
  </button>
</div>
`;
